<resources>
    <string name="app_name">Talktie</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_company_name">Company name</string>
    <string name="lbl_thanks">Thanks!! :) </string>
    <string name="lbl_fulltime">Fulltime</string>
    <string name="lbl_united_states">United States</string>
    <string name="lbl_description">Description</string>
    <string name="msg_edit_recommenda">Edit recommendation</string>
    <string name="lbl_6k_mo">6K/mo</string>
    <string name="lbl_phone_number">Phone number</string>
    <string name="lbl_interviews">Interviews</string>
    <string name="lbl_8_19_am">8:19 AM</string>
    <string name="msg_enter_street_ad">Enter street address</string>
    <string name="msg_teacher_s_info">Teacher\u2019s information</string>
    <string name="msg_hello_how_are">"Hello, how are you?
I'm contacting you because I'm looking for an internship for the DAM higher degree. "</string>
    <string name="lbl_30_july_2021">30 July, 2021</string>
    <string name="lbl_paulo_mart_nez">Paulo Martínez</string>
    <string name="lbl_contact">Contact</string>
    <string name="msg_are_you_looking">Are you looking to develop your career in customer service and take on larger responsibilities in an exciting and growing environment? We are looking for part-time Back Office Support team members with Dutch to work on our onsite project during weekend shifts.</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_insblabla_cat">insblabla.cat</string>
    <string name="msg_ies_blabla_is_a">IES Blabla is a high-school located in Barcelona which... read more</string>
    <string name="lbl_candidates2">Candidates </string>
    <string name="lbl_industry">Industry</string>
    <string name="msg_add_cover_lette">Add Cover Letter</string>
    <string name="lbl_select">Select</string>
    <string name="lbl_guillermo_vidal">Guillermo Vidal</string>
    <string name="lbl_uber">Uber</string>
    <string name="msg_don_t_receive_c2">Don\u2019t receive code ? </string>
    <string name="lbl_associate">Associate</string>
    <string name="msg_2_use_of_your">2. Use of your personal data</string>
    <string name="lbl_technology">IT</string>
    <string name="msg_i_am_currently">I am currently working here</string>
    <string name="msg_sri_wedari_soek">Sri Wedari Soekarno</string>
    <string name="lbl_applied">Applied</string>
    <string name="msg_thanks_i_will2">Thanks, I will reiew yout cv</string>
    <string name="lbl_about2">About</string>
    <string name="msg_hello_could_yo2">Hello, could you send it through email?</string>
    <string name="lbl_ayesha_resume">Ayesha Resume</string>
    <string name="lbl_king">King </string>
    <string name="lbl_company">Company</string>
    <string name="lbl_thanks2">Thanks! </string>
    <string name="lbl_resend_code">Resend code</string>
    <string name="lbl_set_location">Set Location</string>
    <string name="msg_i_know_i_can_he">"I know I can help your company create stunning visuals. As someone who has worked in marketing and graphic design for over a decade, I know what brands need to capture their audiences' attention. With my pow\u2026. read more"</string>
    <string name="lbl_1_3_km">1.3 km</string>
    <string name="lbl_los_angeles_ca">Los Angeles, CA</string>
    <string name="msg_build_a_profesi">Build a profesional resume, that attracts recruiters for better oppertunities.</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_you">You</string>
    <string name="msg_thanks_for_your">Thanks for your help!</string>
    <string name="msg_can_the_student">Can the student be there at 9am in Monday?</string>
    <string name="msg_technical_skill">Technical skills</string>
    <string name="msg_entre_your_emai">entre your Email</string>
    <string name="lbl_development">Development</string>
    <string name="lbl_publish">Publish</string>
    <string name="lbl_gitlab">GitLab</string>
    <string name="lbl_job_type">Job type</string>
    <string name="lbl_benefits">Benefits </string>
    <string name="lbl_ios">iOS</string>
    <string name="msg_what_are_you_lo">What company are you looking for?</string>
    <string name="msg_product_designe">Product Designer</string>
    <string name="msg_numApplicants">0</string>
    <string name="msg_textApplicants">Applicants</string>
    <string name="msg_high_school_dip">High school diploma</string>
    <string name="lbl_message">Message</string>
    <string name="lbl_7_more_reviews">7 More Reviews</string>
    <string name="lbl_recommendations">Recommendations</string>
    <string name="lbl_5k_mo">5K/mo</string>
    <string name="msg_enter_postal_co">Enter postal code</string>
    <string name="lbl_offers_posted">Offers Posted</string>
    <string name="lbl_postal_code">Postal Code</string>
    <string name="lbl_categories">Categories</string>
    <string name="msg_someone_who_h">- Someone who has ample work experience with synthesizing primary research, developing insight-driven product strategy, and extending that strategy into artefacts in a creative, systematic and logical fashion
-Adapt and meticulous with creating user </string>
    <string name="lbl_about_me">About Me</string>
    <string name="lbl_out_of_5">out of 5</string>
    <string name="msg_i_agree_to_the">I agree to the Terms of Service</string>
    <string name="lbl_job_location">Job Location</string>
    <string name="msg_43_bourke_stree">43 Bourke Street, Newbridge NSW 837
Raffles Place, Boat Band M83</string>
    <string name="lbl_search_message">Search Message </string>
    <string name="lbl_specialties">Specialties</string>
    <string name="lbl_recruiter">Recruiter</string>
    <string name="lbl_ies_blabla">IES Blabla</string>
    <string name="lbl_1_2_years">1-2 years</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_17">17</string>
    <string name="lbl_vacant_land">Vacant Land</string>
    <string name="lbl_high_school">High School</string>
    <string name="lbl_soraya_mar">Soraya Mar </string>
    <string name="lbl_add_new_message">Add New Message</string>
    <string name="msg_192_open_positi">192 open positions</string>
    <string name="lbl_health">Health</string>
    <string name="lbl_privacy_policy">Privacy policy</string>
    <string name="lbl_russian">Russian</string>
    <string name="lbl_best_studio">Best Studio</string>
    <string name="lbl_mail_mail_com">mail@mail.com</string>
    <string name="msg_institution_inf">Institution Information</string>
    <string name="lbl_king_com">king.com</string>
    <string name="lbl_done">Done</string>
    <string name="msg_pdf_doc_tx">Only .pdf format are accepted.</string>
    <string name="lbl_log_in2">Log In</string>
    <string name="lbl_photo">Photo</string>
    <string name="msg_rababbeihaqi_gm">rababbeihaqi@gmail.com</string>
    <string name="lbl_success">SUCCESS</string>
    <string name="msg_edit_presentati">Edit presentation</string>
    <string name="lbl_all_categories">All Categories</string>
    <string name="lbl_job_categories">Job Categories</string>
    <string name="lbl_job_preferences">Availability</string>
    <string name="msg_profile_complet2">Profile completeness 90%</string>
    <string name="lbl_security">Security</string>
    <string name="lbl_spain">Spain</string>
    <string name="lbl_serach_message">Serach Message </string>
    <string name="msg_head_of_product">Head of Product Design</string>
    <string name="lbl_job_title">Job Title</string>
    <string name="lbl_talktie">TalkTie</string>
    <string name="lbl_you_re_welcome">You\u2019re welcome.</string>
    <string name="msg_hi_rabab_beiha">Hi, Rabab Beihaqi</string>
    <string name="lbl_349_irvine_ca">349 Irvine, CA</string>
    <string name="lbl_art_director">Full Availability</string>
    <string name="lbl_on">ON</string>
    <string name="msg_use_current_loc">Use current location</string>
    <string name="lbl_none">None</string>
    <string name="msg_hello_how_are3">"Hello, how are you?
I'm contacting you because I'm looking for an
internship."</string>
    <string name="lbl_type">type</string>
    <string name="msg_hello_how_are2">"Hello, how are you?
I'm contacting you because I wanted to send you the internship agreement to sign it."</string>
    <string name="msg_enter_company_n">Enter company name</string>
    <string name="lbl_skills">Skills</string>
    <string name="lbl_reviews">Reviews</string>
    <string name="msg_enter_company_l">Enter company location</string>
    <string name="lbl_locate">Barcelona</string>
    <string name="lbl_hello_mail_com">hello@mail.com</string>
    <string name="msg_we_ve_sent_your">We\u2019ve sent your verification code to +32 8304 5321</string>
    <string name="lbl_remind_me">Remind me</string>
    <string name="msg_add_an_offer_he">Add an offer here</string>
    <string name="msg_part_time_back">Part time: Back Office Support
with Dutch (m/f/d)</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_country">Country</string>
    <string name="lbl_lluis_miguel_f">Lluis Miguel F.</string>
    <string name="msg_3_disclosure_o">3. Disclosure of your personal data</string>
    <string name="msg_enter_the_otp_s">Enter the otp sent to your email</string>
    <string name="lbl_select_type">Select type</string>
    <string name="msg_write_your_lett">Write your letter</string>
    <string name="lbl_type_of_school">Type of school</string>
    <string name="lbl_max">Max</string>
    <string name="msg_work_from_anywh">Work from anywhere</string>
    <string name="msg_mid_level_ux_de">Mid-level UX Designer </string>
    <string name="lbl_portuguese">Portuguese</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="msg_posted_on_20_ju">Posted on 20 July</string>
    <string name="lbl_903_578_712">903 578 712</string>
    <string name="lbl_sign_up_to_join">Sign up to join</string>
    <string name="msg_you_can_talk_ab">You can talk about your years of experience, the sector where you would like to do an internship, your skills, etc.  </string>
    <string name="lbl_toptal">Toptal</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="msg_customer_servic">Customer Service</string>
    <string name="msg_we_only_access">We only access your location while you are using this incredible app</string>
    <string name="lbl_slide_to_answer">slide to answer</string>
    <string name="lbl_9_49_am">9:49 AM</string>
    <string name="lbl_2_hours_ago">2 hours ago</string>
    <string name="lbl_end_date">End Date</string>
    <string name="lbl_all_messages">All messages</string>
    <string name="lbl_60_x_60">60 x 60</string>
    <string name="msg_add_a_recommend">Add a recommendation</string>
    <string name="lbl_summary">Summary</string>
    <string name="lbl_design_lead2">Design Lead </string>
    <string name="lbl_sing_in">Sign in</string>
    <string name="lbl_0">0</string>
    <string name="lbl_5">5</string>
    <string name="lbl_8">8</string>
    <string name="msg_forget_passswro">Forget Passswrod</string>
    <string name="lbl_edit">Edit</string>
    <string name="msg_verifying_numbe">Verifying Number</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_save">Save</string>
    <string name="msg_don_t_receive_c">Don\u2019t receive code ? Re-send</string>
    <string name="lbl_1_20_min_left">1:20 min left</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_enter_code">Enter code</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_00_120_sec">00:120 Sec</string>
    <string name="name_and_surname">Name and surname</string>
    <string name="lbl_edit_recommendation">Edit recommendation</string>
    <string name="lbl_delete">Delete</string>
</resources>