<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditRecommendation">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10pxh"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_return"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50pxh"
            android:padding="@dimen/_10pxh"
            android:src="@drawable/img_arrowleft_black_900"
            tools:ignore="ContentDescription" />

        <TextView android:ellipsize="end"
            android:id="@+id/txtPersonalInform"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1pxv"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.79"
            android:layout_width="0dp"
            android:singleLine="true"
            android:text="@string/lbl_edit_recommendation"
            style="@style/txtRobotoromanbold22_C"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6pxh"
        android:layout_marginTop="@dimen/_2pxv"
        android:layout_marginBottom="@dimen/_25pxv"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photo_student"
            android:layout_width="@dimen/_60pxh"
            android:layout_height="@dimen/_60pxh"
            android:src="@drawable/profile_image_defaut" />

        <TextView
            android:id="@+id/txtName_student"
            style="@style/txtRobotoromanbold22_C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_10pxh"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/lbl_name" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_5pxh"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearAbout"
            style="@style/groupStylecornerRadius_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:layout_marginTop="@dimen/_5pxv"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/linearColumnguillermovidal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_marginBottom="@dimen/_25pxv"
                android:gravity="start"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/photo_teacher"
                    android:layout_width="@dimen/_50pxh"
                    android:layout_height="@dimen/_50pxh"
                    android:src="@drawable/teacher_default" />

                <TextView
                    android:id="@+id/txtName_teacher"
                    style="@style/txtRobotoromanbold17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/name_and_surname" />

            </LinearLayout>


            <TextView
                android:id="@+id/txtRecommendation"
                style="@style/txtRobotoromanregular15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginBottom="@dimen/_10pxh"
                android:layout_marginEnd="@dimen/_17pxh"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_5pxh"
                android:hint="@string/lbl_recommendations"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/_5pxh"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnDetele"
                    style="@style/btnSolidRounded_C"
                    android:layout_width="@dimen/_70pxh"
                    android:layout_height="30dp"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_gravity="center"
                    android:text="@string/lbl_delete"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    style="@style/btnSolidRounded_C"
                    android:layout_width="@dimen/_70pxh"
                    android:layout_margin="@dimen/_5pxh"
                    android:visibility="gone"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:text="@string/lbl_cancel"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSave"
                    style="@style/btnSolidRounded_S"
                    android:layout_margin="@dimen/_5pxh"
                    android:layout_width="@dimen/_70pxh"
                    android:visibility="gone"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:text="@string/lbl_save"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnEdit"
                    style="@style/btnSolidRounded_S"
                    android:layout_margin="@dimen/_5pxh"
                    android:layout_width="@dimen/_70pxh"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:text="@string/lbl_edit"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>