<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignIn2"
    android:gravity="center_horizontal"
    android:id="@+id/linearSinginTwo"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical" style="@style/groupStylewhite_A700">
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnverifyingNumberOne"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnVerifyingNumberOne"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_20pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_20pxv"
            android:singleLine="true"
            android:text="@string/msg_verifying_numbe"
            android:textAllCaps="false" style="@style/btnSolid" tools:text="@string/msg_verifying_numbe"/>
        <TextView android:gravity="start"
            android:id="@+id/txtWevesentyour"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_48pxh"
            android:layout_marginStart="@dimen/_48pxh"
            android:layout_marginTop="@dimen/_40pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:text="@string/msg_we_ve_sent_your"
            style="@style/txtRobotoromanregular17_3" tools:text="@string/msg_we_ve_sent_your"/>
        <EditText
            android:background="@drawable/rectangle_bg_bluegray_50_radius_8"
            android:ellipsize="end"
            android:hint="@string/lbl_enter_code"
            android:id="@+id/etEmail" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_48pxh"
            android:layout_marginStart="@dimen/_48pxh"
            android:layout_marginTop="@dimen/_39pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_11pxv"
            android:singleLine="true"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRounded_2" tools:ignore="Autofill"/>
        <FrameLayout android:id="@+id/frameButtonVerify"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_50pxv"
            android:layout_marginEnd="@dimen/_48pxh"
            android:layout_marginStart="@dimen/_48pxh"
            android:layout_marginTop="@dimen/_24pxv" android:layout_width="@dimen/_310pxh">
            <TextView android:ellipsize="end"
                android:id="@+id/txtVerify"
                android:layout_gravity="bottom|center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_13pxv"
                android:layout_marginEnd="@dimen/_134pxh"
                android:layout_marginStart="@dimen/_134pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@string/lbl_verify"
                style="@style/txtRobotosemibolditalic17" tools:text="@string/lbl_verify"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSingIn"
                style="@style/btnSolidRounded_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_15pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@string/lbl_sing_in"
                android:textAllCaps="false"
                tools:text="@string/lbl_sing_in" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearRowresendcode"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/_49pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_marginEnd="@dimen/_49pxh"
            android:layout_marginBottom="@dimen/_361pxv"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtResendcode"
                style="@style/txtRobotoromanregular17_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.48"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@string/lbl_resend_code"
                tools:text="@string/lbl_resend_code" />

            <TextView
                android:id="@+id/txtTime"
                style="@style/txtRobotoromanregular17_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_105pxh"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_weight="0.52"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@string/lbl_1_20_min_left"
                tools:text="@string/lbl_1_20_min_left" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

