<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearCodepasword"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageArrowleft"
            android:layout_gravity="start"
            android:layout_height="@dimen/_11pxh"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="@dimen/_17pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
        <ImageView android:id="@+id/imageRectangleSix"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_177pxh"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="@dimen/_213pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_rectangle6"
            tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle6"/>
        <LinearLayout android:id="@+id/linearColumnframeseven"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtFrameSeven"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:paddingStart="@dimen/_1pxh"
                android:paddingTop="@dimen/_1pxv"
                android:singleLine="true"
                android:text="@string/msg_forget_passswro"
                style="@style/txtSolid" tools:text="@string/msg_forget_passswro"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtEntertheotps"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_81pxh"
                android:layout_marginStart="@dimen/_81pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/msg_enter_the_otp_s"
                style="@style/txtRobotoromanregular14_1" tools:text="@string/msg_enter_the_otp_s"/>
            <LinearLayout android:id="@+id/linearRowgroupsixtysix"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <EditText android:ellipsize="end"
                    android:id="@+id/txtGroupSixtySix"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingEnd="@dimen/_24pxh"
                    android:paddingStart="@dimen/_27pxh"
                    android:paddingTop="@dimen/_14pxv"
                    android:singleLine="true"
                    android:hint="@string/lbl_5"
                    style="@style/txtSolidRoundedOutline" />
                <EditText android:ellipsize="end"
                    android:id="@+id/txtGroupSixtyFive"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_44pxh"
                    android:layout_weight="0.25"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingEnd="@dimen/_24pxh"
                    android:paddingStart="@dimen/_26pxh"
                    android:paddingTop="@dimen/_14pxv"
                    android:singleLine="true"
                    android:hint="@string/lbl_8"
                    style="@style/txtSolidRoundedOutline" />
                <EditText android:ellipsize="end"
                    android:id="@+id/txtGroupSixtyFour"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_49pxh"
                    android:layout_weight="0.25"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_13pxv"
                    android:paddingEnd="@dimen/_24pxh"
                    android:paddingStart="@dimen/_25pxh"
                    android:paddingTop="@dimen/_14pxv"
                    android:singleLine="true"
                    android:hint="@string/lbl_0"
                    style="@style/txtSolidRoundedOutline" />
                <EditText android:ellipsize="end"
                    android:id="@+id/txtGroupSixtyThree"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_36pxh"
                    android:layout_weight="0.25"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_13pxv"
                    android:paddingEnd="@dimen/_25pxh"
                    android:paddingStart="@dimen/_25pxh"
                    android:paddingTop="@dimen/_14pxv"
                    android:singleLine="true"
                    android:hint="@string/lbl_0"
                    style="@style/txtSolidRoundedOutline" />
            </LinearLayout>
            <TextView android:ellipsize="end" android:id="@+id/txtTime"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_141pxh"
                android:layout_marginStart="@dimen/_141pxh"
                android:layout_marginTop="@dimen/_29pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_00_120_sec"
                style="@style/txtRobotoromanmedium14" tools:text="@string/lbl_00_120_sec"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtDontreceivec"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_94pxh"
                android:layout_marginStart="@dimen/_94pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/msg_don_t_receive_c"
                style="@style/txtOutfitregular14" tools:text="@string/msg_don_t_receive_c"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSubmit"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_165pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_11pxv"
                android:singleLine="true"
                android:text="@string/lbl_submit"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_3" tools:text="@string/lbl_submit"/>
        </LinearLayout>
    </LinearLayout>
